# amplifier-bundle-graph-canvas

./: .gitignore  bundle.md  pyproject.toml
agents/: graph-canvas-expert.md
behaviors/: graph-canvas.yaml
context/: graph-canvas-awareness.md
docs/: GRAPH_PROTOCOL.md  kepler-integration.md
docs/plans/: 2026-03-02-kepler-ring4-implementation.md  2026-03-02-kepler-ring4-integration-design.md
modules/graph-canvas-compiler/: pyproject.toml
modules/graph-canvas-compiler/amplifier_module_graph_canvas_compiler/: __init__.py  compile.py  decompile.py  schema.py
modules/graph-canvas-compiler/graph_canvas_compiler/: __init__.py  compile.py  layout.py  schema.py
modules/graph-canvas-compiler/tests/: test_compile.py  test_decompile.py  test_layout.py  test_schema.py
modules/hooks-graph-canvas/: pyproject.toml
modules/hooks-graph-canvas/amplifier_module_hooks_graph_canvas/: __init__.py  event_mapper.py
modules/hooks-graph-canvas/hooks_graph_canvas/: __init__.py  hook.py
modules/hooks-graph-canvas/tests/: test_event_mapper.py  test_hook.py
modules/tool-graph-canvas/: pyproject.toml
modules/tool-graph-canvas/amplifier_module_tool_graph_canvas/: graph_state.py  protocol.py  tool.py
modules/tool-graph-canvas/tests/: test_graph_state.py  test_protocol.py  test_tool.py
modules/tool-graph-canvas/tool_graph_canvas/: __init__.py  graph_state.py  tool.py
skills/graph-authoring/: skill.md
tests/: conftest.py
tests/integration/: test_bundle_integration.py
