[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hooks-graph-canvas"
version = "0.1.0"
description = "Hooks module for graph canvas lifecycle events"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
