[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-graph-canvas"
version = "0.1.0"
description = "Tool module for graph canvas operations"
requires-python = ">=3.11"
dependencies = [
    "graph-canvas-compiler",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[project.entry-points."amplifier.modules"]
tool-graph-canvas = "tool_graph_canvas:mount"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
